--- a/index.html
+++ b/index.html
@@ -5,42 +5,52 @@
   <title>Para Jaqueline 💖</title>
   <style>
     body {
-      background-color: #ffe6f0;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      animation: backgroundFade 10s infinite alternate;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fad0c4);
+      font-family: 'Arial', sans-serif;
+      overflow: hidden;
     }
 
-    @keyframes backgroundFade {
-      from { background-color: #ffe6f0; }
-      to { background-color: #ffb3c6; }
+    .container {
+      position: relative;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      flex-direction: column;
+      color: #fff;
+      animation: fadeIn 2s ease-out;
     }
 
     h1 {
-      color: #ff4d79;
       font-size: 3em;
-      animation: fadeIn 2s ease-in;
+      margin-bottom: 20px;
+      animation: slideIn 2s ease-out;
     }
 
     p {
-      font-size: 18px;
-      animation: fadeIn 4s ease-in;
+      font-size: 1.2em;
+      max-width: 600px;
+      margin-bottom: 30px;
+      animation: fadeIn 3s ease-out;
     }
 
     button {
-      padding: 10px 20px;
+      padding: 12px 24px;
       background-color: #ff4d79;
-      color: white;
+      color: #fff;
       border: none;
-      border-radius: 5px;
+      border-radius: 30px;
       font-size: 1em;
       cursor: pointer;
-      transition: transform 0.3s;
-      animation: bounce 2s infinite;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      transition: all 0.3s ease;
     }
 
     button:hover {
+      background-color: #ff6b8a;
       transform: scale(1.1);
     }
 
@@ -49,22 +59,49 @@
       to { opacity: 1; }
     }
 
-    @keyframes bounce {
-      0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
-      40% { transform: translateY(-10px); }
-      60% { transform: translateY(-5px); }
+    @keyframes slideIn {
+      from { transform: translateY(-50px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    .heart {
+      position: absolute;
+      font-size: 2em;
+      animation: floatUp 10s infinite;
+      color: #ff6b8a;
+      opacity: 0.7;
+    }
+
+    @keyframes floatUp {
+      from { transform: translateY(100vh) rotate(0deg); opacity: 0; }
+      to { transform: translateY(-10vh) rotate(360deg); opacity: 1; }
     }
   </style>
 </head>
 <body>
+
+<div class="container">
   <h1>💖 Para Jaqueline 💖</h1>
   <p>
     Querida Jaqueline Alvarado,<br><br>
-    Este pequeño espacio está hecho solo para ti. Cada día contigo es una nueva aventura,  
-    y esta app es solo un pequeño regalo para recordarte cuánto te amo. 💌<br><br>
-    Gracias por ser mi compañera, mi amiga y mi inspiración. Eres el sol que ilumina mis días  
-    y la estrella que guía mis noches. Te amo más de lo que las palabras pueden decir. 🌟💖
+    Cada día contigo es una nueva aventura, y esta app es solo un pequeño regalo para recordarte cuánto te amo. 💌<br>
+    Eres mi sol, mi estrella y mi inspiración. Te amo más de lo que las palabras pueden decir. 🌟💖
   </p>
   <button onclick="alert('¡Te amo mucho, Jaqueline! 💕')">Haz clic aquí</button>
+</div>
+
+<!-- Corazones animados -->
+<script>
+  const hearts = ["💖","💕","💘","💝","💞"];
+  for (let i = 0; i < 30; i++) {
+    let heart = document.createElement("div");
+    heart.classList.add("heart");
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.animationDuration = (5 + Math.random() * 5) + "s";
+    heart.innerText = hearts[Math.floor(Math.random() * hearts.length)];
+    document.body.appendChild(heart);
+  }
+</script>
+
 </body>
 </html>
