--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
 <!-- Sorpresa con foto -->
 <div id="surprise">
   <div>
-    <img src="https://drive.google.com/file/d/1mkbw_w0hky8qyKMzFkjArhLhduH-b4BJ/view?usp=sharing" alt="Foto Especial">
+    <img src="https://drive.google.com/uc?export=view&id=1mkbw_w0hky8qyKMzFkjArhLhduH-b4BJ
+" alt="Foto Especial">
     <br>
     <button onclick="cerrarSorpresa()">Cerrar</button>
   </div>
