--- a/index.html
+++ b/index.html
@@ -139,15 +139,14 @@
   }
 </script>
 
-<!-- Sorpresa con foto -->
 <div id="surprise">
   <div>
-    <img src="https://drive.google.com/uc?export=view&id=1mkbw_w0hky8qyKMzFkjArhLhduH-b4BJ
-" alt="Foto Especial">
+    <img src="https://drive.google.com/uc?export=view&id=1mkbw_w0hky8qyKMzFkjArhLhduH-b4BJ" alt="Foto Especial">
     <br>
     <button onclick="cerrarSorpresa()">Cerrar</button>
   </div>
 </div>
+
 
 <script>
 function mostrarSorpresa() {
