--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 <div id="surprise">
   <div>
-    <img src="https://drive.google.com/uc?export=view&id=1mkbw_w0hky8qyKMzFkjArhLhduH-b4BJ" alt="Foto Especial">
+   <img src="mi_foto.jpg" alt="Foto Especial">
     <br>
     <button onclick="cerrarSorpresa()">Cerrar</button>
   </div>
