--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 <div id="surprise">
   <div>
-   <img src="mi_foto.jpg" alt="Foto Especial">
+   <img src="mi_foto.jpeg" alt="Foto Especial">
     <br>
     <button onclick="cerrarSorpresa()">Cerrar</button>
   </div>
