--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 <!-- Sorpresa con imagen local -->
 <div id="surprise">
-  <img src="mi_foto.jpg" alt="Foto Especial">
+  <img src="mi_foto.jpeg" alt="Foto Especial">
   <button onclick="cerrarSorpresa()">Cerrar</button>
 </div>
 
