--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      background: linear-gradient(135deg, #2b2b2b, #1a1a1a);
       font-family: 'Arial', sans-serif;
       overflow: hidden;
+      color: #fff;
     }
 
     .container {
@@ -20,7 +21,6 @@
       align-items: center;
       text-align: center;
       flex-direction: column;
-      color: #fff;
       animation: fadeIn 2s ease-out;
       z-index: 1;
     }
@@ -29,6 +29,7 @@
       font-size: 3em;
       margin-bottom: 20px;
       animation: slideIn 2s ease-out;
+      color: #ff6b8a;
     }
 
     p {
@@ -36,22 +37,23 @@
       max-width: 600px;
       margin-bottom: 30px;
       animation: fadeIn 3s ease-out;
+      color: #e0e0e0;
     }
 
     button {
       padding: 12px 24px;
-      background-color: #ff4d79;
+      background-color: #ff6b8a;
       color: #fff;
       border: none;
       border-radius: 30px;
       font-size: 1em;
       cursor: pointer;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
       transition: all 0.3s ease;
     }
 
     button:hover {
-      background-color: #ff6b8a;
+      background-color: #ff85a1;
       transform: scale(1.1);
     }
 
@@ -70,7 +72,7 @@
       font-size: 2em;
       animation: floatUp 10s linear infinite;
       color: #ff6b8a;
-      opacity: 0.7;
+      opacity: 0.8;
       z-index: 0;
     }
 
@@ -84,15 +86,15 @@
       display: none;
       position: fixed;
       top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0, 0, 0, 0.9);
       justify-content: center; align-items: center;
       z-index: 999;
       flex-direction: column;
     }
 
     #surprise img {
-      max-width: 90%;
-      max-height: 90%;
+      max-width: 80%;
+      max-height: 80%;
       width: auto;
       height: auto;
       border-radius: 15px;
@@ -102,7 +104,7 @@
 
     #surprise button {
       margin-top: 20px;
-      background-color: #ff4d79;
+      background-color: #ff6b8a;
       color: #fff;
       border: none;
       padding: 10px 20px;
@@ -122,7 +124,7 @@
   <button onclick="mostrarSorpresa()">Haz clic aquí</button>
 </div>
 
-<!-- Corazones animados iniciales -->
+<!-- Corazones animados -->
 <script>
   const hearts = ["💖","💕","💘","💝","💞"];
   for (let i = 0; i < 30; i++) {
@@ -136,7 +138,6 @@
 
   function mostrarSorpresa() {
     document.getElementById("surprise").style.display = "flex";
-    // Agregar más corazones al hacer clic
     for (let i = 0; i < 20; i++) {
       let heart = document.createElement("div");
       heart.classList.add("heart");
@@ -152,9 +153,8 @@
   }
 </script>
 
-<!-- Sorpresa con imagen local -->
 <div id="surprise">
-  <img src="mi_foto.jpeg" alt="Foto Especial">
+  <img src="mi_foto.jpg" alt="Foto Especial">
   <button onclick="cerrarSorpresa()">Cerrar</button>
 </div>
 
