--- a/index.html
+++ b/index.html
@@ -1,167 +1,128 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Para Jaqueline 💚</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #000;
-      font-family: 'Courier New', monospace;
-      overflow: hidden;
-      color: #0f0;
-    }
+<meta charset="UTF-8">
+<title>💖 Para Jaqueline 💖</title>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-color: #000;
+    font-family: 'Arial', sans-serif;
+    overflow: hidden;
+    color: #ff69b4; /* Rosa neón */
+  }
 
-    .container {
-      position: relative;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      flex-direction: column;
-      animation: fadeIn 2s ease-out;
-      z-index: 1;
-    }
+  .container {
+    position: relative;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    z-index: 1;
+  }
 
-    h1 {
-      font-size: 3em;
-      margin-bottom: 20px;
-      animation: slideIn 2s ease-out;
-      color: #0f0;
-    }
+  h1 {
+    font-size: 3em;
+    margin-bottom: 20px;
+    color: #ff69b4;
+  }
 
-    p {
-      font-size: 1.2em;
-      max-width: 600px;
-      margin-bottom: 30px;
-      animation: fadeIn 3s ease-out;
-      color: #00ff00;
-    }
+  p {
+    font-size: 1.2em;
+    max-width: 600px;
+    color: #ffb6c1;
+    margin-bottom: 30px;
+  }
 
-    button {
-      padding: 12px 24px;
-      background-color: #0f0;
-      color: #000;
-      border: none;
-      border-radius: 30px;
-      font-size: 1em;
-      cursor: pointer;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
-      transition: all 0.3s ease;
-    }
+  button {
+    padding: 12px 24px;
+    background-color: #ff69b4;
+    color: #fff;
+    border: none;
+    border-radius: 30px;
+    font-size: 1em;
+    cursor: pointer;
+    box-shadow: 0 4px 15px rgba(255,105,180,0.5);
+    transition: all 0.3s ease;
+  }
 
-    button:hover {
-      background-color: #33ff33;
-      transform: scale(1.1);
-    }
+  button:hover {
+    background-color: #ff85a1;
+    transform: scale(1.1);
+  }
 
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
+  /* Fondo "TE AMO" */
+  .matrix {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 0;
+  }
 
-    @keyframes slideIn {
-      from { transform: translateY(-50px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
+  .matrix span {
+    position: absolute;
+    color: #ff69b4;
+    font-size: 20px;
+    font-weight: bold;
+    opacity: 0.7;
+    animation: fall 10s linear infinite;
+  }
 
-    .heart {
-      position: fixed;
-      font-size: 2em;
-      animation: floatUp 10s linear infinite;
-      color: #00ff00;
-      opacity: 0.8;
-      z-index: 0;
-    }
+  @keyframes fall {
+    0% { transform: translateY(-100%); opacity: 0; }
+    50% { opacity: 1; }
+    100% { transform: translateY(100vh); opacity: 0; }
+  }
 
-    @keyframes floatUp {
-      0% { transform: translateY(100vh) rotate(0deg); opacity: 0; }
-      50% { opacity: 1; }
-      100% { transform: translateY(-100vh) rotate(360deg); opacity: 0; }
-    }
+  /* Efecto interactivo */
+  .sparkle {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: #ff69b4;
+    border-radius: 50%;
+    pointer-events: none;
+    animation: sparkle 1s linear forwards;
+  }
 
-    #surprise {
-      display: none;
-      position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.95);
-      justify-content: center; align-items: center;
-      z-index: 999;
-      flex-direction: column;
-      color: #0f0;
-    }
-
-    #surprise img {
-      max-width: 80%;
-      max-height: 80%;
-      width: auto;
-      height: auto;
-      border-radius: 15px;
-      box-shadow: 0 0 30px rgba(0,255,0,0.8);
-      transition: transform 0.3s ease;
-    }
-
-    #surprise button {
-      margin-top: 20px;
-      background-color: #0f0;
-      color: #000;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 10px;
-    }
-
-    .matrix {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      z-index: 0;
-    }
-
-    .matrix span {
-      position: absolute;
-      color: #00ff00;
-      font-size: 16px;
-      animation: fall 10s linear infinite;
-    }
-
-    @keyframes fall {
-      0% { transform: translateY(-100%); opacity: 0; }
-      50% { opacity: 1; }
-      100% { transform: translateY(100vh); opacity: 0; }
-    }
-  </style>
+  @keyframes sparkle {
+    from { transform: scale(1); opacity: 1; }
+    to { transform: scale(3); opacity: 0; }
+  }
+</style>
 </head>
 <body>
 
 <div class="container">
-  <h1>💚 Para Jaqueline 💚</h1>
+  <h1>💖 Para Jaqueline 💖</h1>
   <p>
     Querida Jaqueline Alvarado,<br><br>
     Cada día contigo es una nueva aventura, y esta app es solo un pequeño regalo para recordarte cuánto te amo. 💌<br>
-    Eres mi sol, mi estrella y mi inspiración. Te amo más de lo que las palabras pueden decir. 🌟💚
+    Eres mi sol, mi estrella y mi inspiración. Te amo más de lo que las palabras pueden decir. 🌟💖
   </p>
   <button onclick="mostrarSorpresa()">Haz clic aquí</button>
 </div>
 
-<!-- Fondo estilo Matrix con "TE AMO" cayendo -->
+<!-- Fondo "TE AMO" -->
 <script>
   const matrix = document.createElement('div');
   matrix.classList.add('matrix');
   document.body.appendChild(matrix);
 
-  for (let i = 0; i < 100; i++) {
+  for (let i = 0; i < 200; i++) {
     const span = document.createElement('span');
     span.textContent = 'TE AMO';
     span.style.left = `${Math.random() * 100}vw`;
-    span.style.animationDuration = `${5 + Math.random() * 5}s`;
+    span.style.animationDuration = `${5 + Math.random() * 10}s`;
     matrix.appendChild(span);
   }
 
-  // Corazones flotantes iniciales
-  const hearts = ["💚","💚","💚","💚","💚"];
+  // Corazones adicionales (opcional)
+  const hearts = ["💖","💕","💘","💝","💞"];
   for (let i = 0; i < 30; i++) {
     let heart = document.createElement("div");
     heart.classList.add("heart");
@@ -171,27 +132,25 @@
     document.body.appendChild(heart);
   }
 
-  function mostrarSorpresa() {
-    document.getElementById("surprise").style.display = "flex";
-    for (let i = 0; i < 20; i++) {
-      let heart = document.createElement("div");
-      heart.classList.add("heart");
-      heart.style.left = Math.random() * 100 + "vw";
-      heart.style.animationDuration = (5 + Math.random() * 5) + "s";
-      heart.innerText = hearts[Math.floor(Math.random() * hearts.length)];
-      document.body.appendChild(heart);
-    }
+  // Efecto interactivo con mouse o touch
+  document.addEventListener('mousemove', sparkle);
+  document.addEventListener('touchmove', (e) => {
+    sparkle(e.touches[0]);
+  });
+
+  function sparkle(e) {
+    const sparkle = document.createElement('div');
+    sparkle.classList.add('sparkle');
+    sparkle.style.left = `${e.clientX || e.pageX}px`;
+    sparkle.style.top = `${e.clientY || e.pageY}px`;
+    document.body.appendChild(sparkle);
+    setTimeout(() => sparkle.remove(), 1000);
   }
 
-  function cerrarSorpresa() {
-    document.getElementById("surprise").style.display = "none";
+  function mostrarSorpresa() {
+    alert("¡Sorpresa! 💖");
   }
 </script>
-
-<div id="surprise">
-  <img src="mi_foto.jpg" alt="Foto Especial">
-  <button onclick="cerrarSorpresa()">Cerrar</button>
-</div>
 
 </body>
 </html>
