--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     background-color: #000;
     font-family: 'Arial', sans-serif;
     overflow: hidden;
-    color: #ff69b4; /* Rosa neón */
+    color: #ff69b4;
   }
 
   .container {
@@ -78,20 +78,48 @@
     100% { transform: translateY(100vh); opacity: 0; }
   }
 
-  /* Efecto interactivo */
+  /* Chispa de corazones */
   .sparkle {
     position: absolute;
-    width: 10px;
-    height: 10px;
-    background-color: #ff69b4;
-    border-radius: 50%;
-    pointer-events: none;
+    font-size: 24px;
+    color: #ff69b4;
     animation: sparkle 1s linear forwards;
+    pointer-events: none;
   }
 
   @keyframes sparkle {
     from { transform: scale(1); opacity: 1; }
-    to { transform: scale(3); opacity: 0; }
+    to { transform: scale(2); opacity: 0; }
+  }
+
+  /* Sorpresa con foto */
+  #surprise {
+    display: none;
+    position: fixed;
+    top: 0; left: 0; width: 100%; height: 100%;
+    background: rgba(0, 0, 0, 0.95);
+    justify-content: center; align-items: center;
+    z-index: 999;
+    flex-direction: column;
+  }
+
+  #surprise img {
+    max-width: 80%;
+    max-height: 80%;
+    width: auto;
+    height: auto;
+    border-radius: 15px;
+    box-shadow: 0 0 30px rgba(255,255,255,0.8);
+    transition: transform 0.3s ease;
+  }
+
+  #surprise button {
+    margin-top: 20px;
+    background-color: #ff69b4;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
   }
 </style>
 </head>
@@ -121,7 +149,6 @@
     matrix.appendChild(span);
   }
 
-  // Corazones adicionales (opcional)
   const hearts = ["💖","💕","💘","💝","💞"];
   for (let i = 0; i < 30; i++) {
     let heart = document.createElement("div");
@@ -132,7 +159,7 @@
     document.body.appendChild(heart);
   }
 
-  // Efecto interactivo con mouse o touch
+  // Chispa de corazones
   document.addEventListener('mousemove', sparkle);
   document.addEventListener('touchmove', (e) => {
     sparkle(e.touches[0]);
@@ -141,16 +168,28 @@
   function sparkle(e) {
     const sparkle = document.createElement('div');
     sparkle.classList.add('sparkle');
+    sparkle.textContent = '💖';
     sparkle.style.left = `${e.clientX || e.pageX}px`;
     sparkle.style.top = `${e.clientY || e.pageY}px`;
     document.body.appendChild(sparkle);
     setTimeout(() => sparkle.remove(), 1000);
   }
 
+  // Mostrar y cerrar sorpresa
   function mostrarSorpresa() {
-    alert("¡Sorpresa! 💖");
+    document.getElementById("surprise").style.display = "flex";
+  }
+
+  function cerrarSorpresa() {
+    document.getElementById("surprise").style.display = "none";
   }
 </script>
+
+<!-- Div de la foto sorpresa -->
+<div id="surprise">
+  <img src="mi_foto.jpeg" alt="Foto Especial">
+  <button onclick="cerrarSorpresa()">Cerrar</button>
+</div>
 
 </body>
 </html>
