--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     font-size: 3em;
     margin-bottom: 20px;
     text-align: center;
-    color: #ff69b4;
   }
 
   .btn {
@@ -47,41 +46,35 @@
     left: 60%;
   }
 
-  .globo {
-    position: absolute;
-    font-size: 30px;
-    animation: flotar 10s linear infinite;
-    pointer-events: none;
-  }
-
-  @keyframes flotar {
-    from { transform: translateY(100vh); opacity: 0; }
-    to { transform: translateY(-10vh); opacity: 1; }
-  }
-
-  .sparkle {
+  .word {
     position: absolute;
     font-size: 24px;
     color: #ff69b4;
-    animation: sparkle 1s linear forwards;
+    animation: floatUp 10s linear infinite;
     pointer-events: none;
   }
 
-  @keyframes sparkle {
-    from { transform: scale(1); opacity: 1; }
-    to { transform: scale(2); opacity: 0; }
+  @keyframes floatUp {
+    from { transform: translateY(100vh); opacity: 1; }
+    to { transform: translateY(-10vh); opacity: 0; }
   }
 
-  .confeti {
+  .firework {
     position: absolute;
     font-size: 30px;
-    animation: caer 5s linear forwards;
+    color: #ff69b4;
+    animation: firework 1s linear forwards;
     pointer-events: none;
   }
 
-  @keyframes caer {
-    from { opacity: 1; transform: translateY(0); }
-    to { opacity: 0; transform: translateY(100vh); }
+  @keyframes firework {
+    to {
+      transform: translate(
+        calc(var(--dx) * 1px),
+        calc(var(--dy) * 1px)
+      );
+      opacity: 0;
+    }
   }
 </style>
 </head>
@@ -91,21 +84,37 @@
 <button id="btnSi" class="btn" onclick="mensajeSi()">Sí 💖</button>
 <button id="btnNo" class="btn" onmouseover="moverBoton()">No 😜</button>
 
-<!-- Globos flotantes 🎈 -->
 <script>
-  const globos = ["🎈","🎉","🎊","💝"];
-  for (let i = 0; i < 30; i++) {
-    let globo = document.createElement("div");
-    globo.classList.add("globo");
-    globo.innerText = globos[Math.floor(Math.random() * globos.length)];
-    globo.style.left = Math.random() * 100 + "vw";
-    globo.style.animationDuration = (10 + Math.random() * 10) + "s";
-    document.body.appendChild(globo);
+  // Lluvia romántica
+  const palabras = ["Amor", "Jaqueline", "Forever", "💖", "Besos", "Cariño"];
+  for (let i = 0; i < 50; i++) {
+    let word = document.createElement("div");
+    word.textContent = palabras[Math.floor(Math.random() * palabras.length)];
+    word.classList.add("word");
+    word.style.left = Math.random() * 100 + "vw";
+    word.style.animationDuration = (5 + Math.random() * 5) + "s";
+    document.body.appendChild(word);
   }
 
+  // Fuego artificial de corazones
+  function fuegosDeCorazones() {
+    for (let i = 0; i < 30; i++) {
+      let heart = document.createElement("div");
+      heart.textContent = "💖";
+      heart.classList.add("firework");
+      heart.style.left = `${window.innerWidth/2}px`;
+      heart.style.top = `${window.innerHeight/2}px`;
+      heart.style.setProperty('--dx', (Math.random()*400 - 200).toFixed(0));
+      heart.style.setProperty('--dy', (Math.random()*-400).toFixed(0));
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 1000);
+    }
+  }
+
+  // Botones
   function mensajeSi() {
     alert("¡Yo también te amo, Jaqueline! 💖💖💖");
-    confeti();
+    fuegosDeCorazones();
   }
 
   function moverBoton() {
@@ -114,33 +123,6 @@
     const maxHeight = window.innerHeight - btnNo.offsetHeight;
     btnNo.style.left = Math.random() * maxWidth + "px";
     btnNo.style.top = Math.random() * maxHeight + "px";
-  }
-
-  // Chispa de corazones al pasar
-  document.addEventListener('mousemove', sparkle);
-  document.addEventListener('touchmove', (e) => sparkle(e.touches[0]));
-
-  function sparkle(e) {
-    const sparkle = document.createElement('div');
-    sparkle.classList.add('sparkle');
-    sparkle.textContent = '💖';
-    sparkle.style.left = `${e.clientX || e.pageX}px`;
-    sparkle.style.top = `${e.clientY || e.pageY}px`;
-    document.body.appendChild(sparkle);
-    setTimeout(() => sparkle.remove(), 1000);
-  }
-
-  // Explosión de confeti 🎉
-  function confeti() {
-    for (let i = 0; i < 50; i++) {
-      let conf = document.createElement("div");
-      conf.textContent = "🎉";
-      conf.classList.add("confeti");
-      conf.style.left = `${Math.random() * 100}vw`;
-      conf.style.top = `${Math.random() * 100}vh`;
-      document.body.appendChild(conf);
-      setTimeout(() => conf.remove(), 5000);
-    }
   }
 </script>
 
