--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     font-size: 3em;
     margin-bottom: 20px;
     text-align: center;
+    color: #ff69b4;
   }
 
   .btn {
@@ -46,20 +47,19 @@
     left: 60%;
   }
 
-.word {
+  .word {
     position: absolute;
     font-size: 24px;
     color: #ff69b4;
     animation: floatUp 10s linear infinite;
     pointer-events: none;
-    padding: 5px 10px;          /* Espacio interno */
-    margin: 10px;               /* Espacio externo */
-    background: rgba(0,0,0,0.3); /* Fondo sutil para destacar */
-    border-radius: 10px;        /* Bordes redondeados */
-    white-space: nowrap;        /* Evitar cortes */
-    box-shadow: 0 0 10px rgba(255, 105, 180, 0.5); /* Sombra para resaltar */
-}
-
+    padding: 5px 10px;
+    margin: 10px;
+    background: rgba(0,0,0,0.3);
+    border-radius: 10px;
+    white-space: nowrap;
+    box-shadow: 0 0 10px rgba(255, 105, 180, 0.5);
+  }
 
   @keyframes floatUp {
     from { transform: translateY(100vh); opacity: 1; }
@@ -87,39 +87,19 @@
 </head>
 <body>
 
-<h1>💖 ¿Me amas, Mi Jaqueline?😐 💖</h1>
+<h1>💖 ¿Quieres ser mi novia, Jaqueline? 💖</h1>
 <button id="btnSi" class="btn" onclick="mensajeSi()">Sí 💖</button>
 <button id="btnNo" class="btn" onmouseover="moverBoton()">No 😜</button>
 
 <script>
   // Lluvia romántica
-const palabras = [
-  "Corazon de melon", 
-  "Mi amorcito", 
-  "Te amo muchisimo", 
-  "💖", 
-  "Me encantas", 
-  "Eres la mejor", 
-  "Besos infinitos", 
-  "Contigo hasta el fin del mundo", 
-  "Eres mi sol", 
-  "Mi vida", 
-  "Juntos por siempre", 
-  "Eres mi todo", 
-  "Siempre a tu lado", 
-  "Eres mi princesa", 
-  "Te quiero", 
-  "Tú y yo", 
-  "Amor eterno", 
-  "Mi corazon late por ti", 
-  "Eres magia pura", 
-  "💘", 
-  "Mi mundo eres tú", 
-  "Siempre en mi corazón", 
-  "Mi reina", 
-  "💝"
-];
-
+  const palabras = [
+    "Corazon de melon", "Mi amorcito", "Te amo muchisimo", "💖",
+    "Me encantas", "Eres la mejor", "Besos infinitos", "Contigo hasta el fin del mundo",
+    "Eres mi sol", "Mi vida", "Juntos por siempre", "Eres mi todo", "Siempre a tu lado",
+    "Eres mi princesa", "Te quiero", "Tú y yo", "Amor eterno", "Mi corazon late por ti",
+    "Eres magia pura", "💘", "Mi mundo eres tú", "Siempre en mi corazón", "Mi reina", "💝"
+  ];
   for (let i = 0; i < 50; i++) {
     let word = document.createElement("div");
     word.textContent = palabras[Math.floor(Math.random() * palabras.length)];
@@ -129,7 +109,7 @@ const palabras = [
     document.body.appendChild(word);
   }
 
-  // Fuego artificial de corazones
+  // Fuegos de corazones
   function fuegosDeCorazones() {
     for (let i = 0; i < 30; i++) {
       let heart = document.createElement("div");
@@ -144,34 +124,33 @@ const palabras = [
     }
   }
 
-  // Botones
+  // Botón Sí
   function mensajeSi() {
-    alert("¡Yo también te amo,Mi Jaqueline! 💖💖💖");
+    alert("¡Yo también te amo, Jaqueline! 💖💖💖");
     fuegosDeCorazones();
   }
 
-function moverBoton() {
+  // Botón No con frases graciosas
+  function moverBoton() {
     const btnNo = document.getElementById("btnNo");
     const maxWidth = window.innerWidth - btnNo.offsetWidth;
     const maxHeight = window.innerHeight - btnNo.offsetHeight;
     btnNo.style.left = Math.random() * maxWidth + "px";
     btnNo.style.top = Math.random() * maxHeight + "px";
-    
-    // Frases chistosas
-    const frases = [
-        "¡No puedes decir que no! 😝",
-        "¡Atrápame si puedes! 😂",
-        "¡No hay escapatoria! 😜",
-        "¡No puedes negarlo! 😆",
-        "¡El amor es inevitable! 💖",
-        "¿En serio dirías que no? 🥺",
-        "¡Imposible resistirse! 🤪",
-        "¡Te amo demasiado para un no! 😘",
-        "¡No, no es una opción! 😂"
-    ];
-    alert(frases[Math.floor(Math.random() * frases.length)]);
-}
 
+    const frasesDivertidas = [
+      "¡No puedes decir que no! 😝",
+      "¡Atrápame si puedes! 😂",
+      "¡No hay escapatoria! 😜",
+      "¡No puedes negarlo! 😆",
+      "¡El amor es inevitable! 💖",
+      "¿En serio dirías que no? 🥺",
+      "¡Imposible resistirse! 🤪",
+      "¡Te amo demasiado para un no! 😘",
+      "¡No, no es una opción! 😂"
+    ];
+    alert(frasesDivertidas[Math.floor(Math.random() * frasesDivertidas.length)]);
+  }
 </script>
 
 </body>
